--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5008,3 +5008,6 @@
          Vatra).
 20160408 peripherals/disk/fdd.c: fix fdd_strerror() reading past the end of the
          fdd_error array (patch #352) (BogDan Vatra).
+20160409 debugger/breakpoint.c,ui/gtk/debugger.c,ui/ui.h,ui/widget/debugger.c,
+         ui/win32/debugger.c: signal the UI when the breakpoints list is changed
+         (patch #357) (BogDan Vatra).
