--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5013,3 +5013,4 @@
          (patch #357) (BogDan Vatra).
 20160417 peripherals/disk/wd_fdc.c: fix Beta 128 type II commands (fixes bug
          #331) (thanks, windale and BogDan Vatra) (Sergio).
+20160417 compat/unix/tuntap.c,ui.c,utils.c: secure strncpy() calls (Sergio).
