--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5087,3 +5087,5 @@
          have a go at updating copyright dates since v 1.1.1 (Fred).
 20160501 ui/fb/fbmouse.c: add missing header in framebuffer UI (Sergio).
 20160502 memory.h: fix typo in MEMORY_PAGES_IN_2K comment (Fred)
+20160503 peripherals/usource.c: add support for Currah uSource snapshots (patch
+         #363) (Fred and Sergio).
