--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5099,3 +5099,5 @@
          as we abort in those circumstances instead (Fred).
 20160508 ui/options.dat: remove shortcut clash with the Simple 8-Bit IDE
          interface (Fred).
+20160508 ui/{gtk,win32}/fileselector.c: add file filters in open/save dialogs on
+         Windows and GTK+ UIs (thanks, Crisis) (Sergio).
