Make floating bus work again.
Legacy-ID: 5473

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5112,3 +5112,4 @@
          (Sergio).
 20160508 roms/se-[01].rom: update SE ROMs to v4.07 (thanks, Andrew Owen)
          (Sergio).
+20160509 periph.c: make floating bus work again (Phil).
