--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5123,3 +5123,5 @@
          (Phil).
 20160514 peripherals/disk/didaktik.c: add support for Didaktik 80 MDOS 1
          snapshots (patch #364) (Fred).
+20160517 periph.[ch],unittests/unittests.c: add unit tests for combining
+         floating bus and peripherals (Phil).
