--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5127,3 +5127,4 @@
          floating bus and peripherals (Phil).
 20160519 roms/se-[01].rom: update to correct SE ROMs v4.07 (thanks, Andrew Owen)
          (Sergio).
+20160519 fuse.c: update help info and remove obsolete options (Sergio).
