Remove references to SDF disk image format.
SDF files are not supported. Disk image documented as TODO status in r3419,
removed latter in r3790.

Legacy-ID: 5497

--- a/man/fuse.1
+++ b/man/fuse.1
@@ -54,7 +54,7 @@ TAP tape files is supported. The SLT extension to the Z80 format is
 partly supported (enough for multi-load games); however, loading of
 the old DAT-file variant is not.
 .PP
-DSK, UDI, FDI, TR0, SDF, MGT, IMG, D40, D80, SAD, TRD, SCL and OPD
+DSK, UDI, FDI, TD0, MGT, IMG, D40, D80, SAD, TRD, SCL and OPD
 disk images are supported when a disk interface is being emulated,
 including the integrated disk drives on +3, Pentagon or Scorpion
 machines as well as the +D, DISCiPLE, Opus Discovery, Beta\ 128 and
@@ -4864,7 +4864,6 @@ DISCiPLE/+D file formats.
 .RE
 .PP
 .I .SAD
-.I .SDF
 .RS
 For compatibility with SAM Coup\('e disk images using these formats.
 Note that SAM Coup\('e `.DSK' images share the same format as `.MGT'.
