--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5128,3 +5128,5 @@
 20160519 roms/se-[01].rom: update to correct SE ROMs v4.07 (thanks, Andrew Owen)
          (Sergio).
 20160519 fuse.c: update help info and remove obsolete options (Sergio).
+20160519 man/fuse.1,peripherals/disk/disk.h: remove references to SDF disk image
+         format (Sergio).
