--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4318,6 +4318,13 @@ rzx:end
 An RZX recording finishes playing
 .RE
 .br
+spectranet:page
+.br
+spectranet:unpage
+.RS
+The Spectranet interface is paged into or out of memory
+.RE
+.br
 tape:play
 .br
 tape:stop
@@ -4325,18 +4332,18 @@ tape:stop
 The emulated tape starts or stops playing
 .RE
 .br
-zxcf:page
-.br
-zxcf:unpage
-.RS
-The ZXCF interface is paged into or out of memory
-.RE
-.br
 zxatasp:page
 .br
 zxatasp:unpage
 .RS
 The ZXATASP interface is paged into or out of memory
+.RE
+.br
+zxcf:page
+.br
+zxcf:unpage
+.RS
+The ZXCF interface is paged into or out of memory
 .RE
 .PP
 In all cases, the event can be specified as
