--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5153,3 +5153,5 @@
 20160523 machine.c: clearing pokes also undoes their effect on memory, so should
          be done before the machine's RAM reset is done (see: patch #367)
          (thanks, Sergio) (Fred).
+20160523 debugger/{commandl.l,commandy.y,event.c}: make wildcard events work
+         (fixes bug #349) (thanks, Sergio) (Phil).
